# aoc2025

./: .envrc  README.md  justfile  pyproject.toml
d1/: p1.py  p2.py
d10/: desc1.txt  desc2.txt  justfile  p1.py  p2.py
d11/: desc1.txt  desc2.txt  p1.py  p2.py
d12/: desc1.txt  p1.py
d2/: p1.py  p2.py  p2_paralel.py
d3/: justfile  p1.py  p2.py
d4/: p1.py  p2.py
d5/: p1.py  p2.py
d6/: p1.py  p2.py
d7/: p1.py  p2.py
d8/: p1.py  p2.py
d9/: justfile  p1.py  p2.py
utils/: fetch_desc.py  make_day.py  submit.py
